# hack-the-box

./: .gitattributes  .gitignore  .gitmodules  README.md  compile_setup.bat  pyproject.toml
.SETUP/: alias.sh  cleanup.sh  setup.sh  tools.sh  update.sh
Academy/Shells & Payloads/: Infiltrating Unix.md
Challenges/BreathetakingView/: Walkthrough.md  python.py
Challenges/BreathetakingView/Breathtaking View/: Dockerfile
Challenges/Dark Runes/deliverables/: WRITEUP.MD
Challenges/Diablos/: .gdb_history  Walkthrough.md  payload-get.py  payload.txt  peda-session-vuln.txt
Challenges/Global Hyperlink Zone/deliverables/: WRITEUP.MD
Challenges/Global Hyperlink Zone/files/: --data-raw  communicate.sh
Challenges/Low Logic/: writeup.md
Challenges/Low Logic/Low_Logic-Writeup/: requirements.txt  solution.py  writeup.md
Challenges/MagicalPalindrone/: MagicalPalindrone.md
Challenges/MagicalPalindrone/files/: palindrone_creator.py  payload.json
Challenges/WeakRSA/: Pipfile  Walkthrough.md
Machines/: Template.md
Machines/Linux/Easy/: Heist.md
Sherlocks/Cuidado/: WRITEUP.MD
Sherlocks/Loggy/: DANGER.txt  keylog.txt
Sherlocks/Noxious/: WRITEUP.MD
Sherlocks/PercyPay/: WRITEUP.MD
Sherlocks/PhantomCheck/: writeup.md
TEMPLATE/writeup/: vars.bash  writeup.md
setup_script/: __init__.py  defaults.json  input_handler.py  main.cpp  main.py  menu.py  project_builder.py  readme_updater.py  utils.py
setup_script/TEMPLATE/administrative/: README.md
setup_script/TEMPLATE/deliverables/: WRITEUP.MD  vars.bash
setup_script/TEMPLATE/evidence/: README.md
(+30 files in other folders)
